--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="main-content" id="description">
 			<!-- <h1>About Stephen</h1> -->
 			<div class="spacer"></div>
-			<ul class="three-by">
+			<ul class="three-by icon-holder">
 				<li>
 					<div class="icon-trio"><div><img id="coffee" src="img/icon_pour-over-copy.png"></div></div>
 					<h2 class="light">Powered by pour-over.</h2>
