Adding Code Based Projects

--- a/code.html
+++ b/code.html
@@ -19,8 +19,8 @@
     <div class="topnav-logo"><a href="index.html"><img src="img/s-box.png" id="logo"></a></div>
 
     <div class="topnav" id="myTopnav">
-        <a href="work.html">Work</a>
-        <a href="#">About</a>
+        <a href="projects.html">Work</a>
+        <a href="about.html">About</a>
         <a href="resume/resume.pdf" target="_blank">Resume</a>
         <a href="index.html#contact">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -29,9 +29,49 @@
   </header>
 
   <main>
-    <div class="main-content project-details">
-      <div class="banner" id="">
-        <div class="title-text"></div>
+    <div class="main-content" id="work-page">
+      <h1>Code Based Projects</h1>
+      <div class="spacer"></div>
+      <div class="project-page">
+        <div class="spacer"></div>
+        <a href="http://creative.colorado.edu/~stba8651/code/p5/moving_icon/index.html"><div class="project" id="codeproject01">
+          <!-- <img src="img/future.png" class="cover-img"> -->
+          <div class="hidden info" >
+            <h2>Moving Icon</h2>
+            <p class="categories">Javascript - p5.js</p>
+          </div>  
+        </div></a>
+        <a href="http://creative.colorado.edu/~stba8651/code/p5/challenge9/index.html"><div class="project" id="codeproject02">
+          <div class="hidden info" >
+            <h2>Simple Solar System</h2>
+            <p class="categories">Javascript - p5.js</p>
+          </div>  
+        </div></a>
+        <a href="http://creative.colorado.edu/~stba8651/code/p5/retro_remix_working_refined/"><div class="project" id="codeproject03">
+          <div class="hidden info" >
+            <h2>Retro Game Remix</h2>
+            <p class="categories">Javascript - p5.js</p>
+          </div>
+        </div></a>
+        <a href="http://creative.colorado.edu/~stba8651/code/p5/gen_garden/gen3/index.html"><div class="project" id="codeproject04">
+          <div class="hidden info" >
+            <h2>Generative Triangle Art</h2>
+            <p class="categories">Javascript - p5.js</p>
+          </div>
+        </div></a>
+        <a href="http://creative.colorado.edu/~stba8651/code/p5/dataviz/index.html"><div class="project" id="codeproject05">
+          <div class="hidden info" >
+            <h2>Data Visualization: Population Born in 1996</h2>
+            <p class="categories">Javascript - p5.js</p>
+          </div>
+        </div></a>
+        <a href="https://twitter.com/Fox_Neuz"><div class="project" id="codeproject06">
+          <div class="hidden info" >
+            <h2>Twitter Bot</h2>
+            <p class="categories">Python Scaper - Google News API - Tweepy</p>
+          </div>
+        </div></a>
+        <div class="spacer"></div>
       </div>
     </div>
   </main>
