--- a/projects.html
+++ b/projects.html
@@ -88,12 +88,12 @@
 						<p class="categories">Logo Design - Branding - Package Design - Illustration - Graphic Design</p>
 					</div>
 				</div></a>
-				<!-- <a href=""><div class="project" id="code">
+				<a href="code.html"><div class="project" id="code">
 					<div class="hidden info" >
 						<h2>Code Based Projects</h2>
 						<p class="categories">Javascript - Python</p>
 					</div>
-				</div></a> -->
+				</div></a>
 				<div class="spacer"></div>
 			</div>
 		</div>
