--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,12 @@
 						<p class="categories">Graphic Design - Experience Design</p>
 					</div>
 				</div></a>
+				<a href="foodfinder.html"><div class="project" id="project09">
+					<div class="hidden info" >
+						<h2>Concept: Fighting Food Deserts</h2>
+						<p class="categories">User Interface Design - Experience Design</p>
+					</div>
+				</div></a>
 				<a href="graphics.html"><div class="project" id="graphics">
 					<div class="hidden info" >
 						<h2>Misc. Graphics</h2>
