--- a/TAPH.html
+++ b/TAPH.html
@@ -37,8 +37,9 @@
           <h1>The Alberta Petite Hotel</h1>
         </div>
         <div class="body-text">
-          <p>I was approached by The Alberta Petite Hotel help them approach the digital world and interdusce themselves through a new website. As soon as the project began it became apparent that this local business needed to find it's voice before it could start speaking to the world.</p>
+          <p>I was approached by The Alberta Petite Hotel help them approach the digital world and introduce themselves through a new website. As soon as the project began it became apparent that this local business needed to find it's voice before it could start speaking to the world.</p>
           <p>Working with the hotel owners, I developed brand strategy and refined the experience of the business across all media. Not only did this help the owners further their understanding of utilizing social platforms but allowed them to see how all facets of their business connect to create an identity. Once the brand had a voice and personality, I helped present the hotel to the world through a webpage. Once the brand had a voice and personality, I put it to work through a simple and intuitive webpage.</p>
+          <p>See the finished site <a href="http://www.albertapetitehotel.com" target="_blank"><b>HERE</b></a>.</p>
         </div>
       </div>
     </div>
