--- a/graphics.html
+++ b/graphics.html
@@ -35,19 +35,19 @@
       </div>
       <div class="spacer"></div>
       <div class="gallery">
-        <a href="img/graphic-design/all-three-la-croix-cans.png" target="_blank"><img src="img/graphic-design/all-three-la-croix-cans.png" class="lone-image"></a>
-        <a href="img/graphic-design/Colorado-Symphony-01.png" target="_blank"><img src="img/graphic-design/Colorado-Symphony-01.png"class="side-by-side"></a>
-        <a href="img/graphic-design/Colorado-Symphony-02.png" target="_blank"><img src="img/graphic-design/Colorado-Symphony-02.png"class="side-by-side"></a>
-        <a href="img/graphic-design/PBWF-cover-redesign.png"class="side-by-side" target="_blank"><img src="img/graphic-design/PBWF-cover-redesign.png"class="side-by-side"></a>
-        <a href="img/graphic-design/model-x-layout.png" target="_blank"><img src="img/graphic-design/model-x-layout.png" class="lone-image" ></a>
-        <a href="img/graphic-design/dog.png" target="_blank"><img src="img/graphic-design/dog.png"class="side-by-side"></a>
-        <a href="img/graphic-design/BLONDE-LOGO-white-back.png" target="_blank"><img src="img/graphic-design/BLONDE-LOGO-white-back.png"class="side-by-side"></a>
-        <a href="img/graphic-design/SATT-logo-04.png" target="_blank"><img src="img/graphic-design/SATT-logo-04.png"class="side-by-side"> </a>       
-        <a href="img/graphic-design/skull-03.png" target="_blank"><img src="img/graphic-design/skull-03.png"class="side-by-side"></a>
-        <a href="img/graphic-design/EB-logo-04.png" target="_blank"><img src="img/graphic-design/EB-logo-04.png"class="side-by-side"></a>
-        <a href="img/graphic-design/Massimo_poster.png" target="_blank"><img src="img/graphic-design/Massimo_poster.png"class="side-by-side"></a>
-        <a href="img/graphic-design/s-logo.png" target="_blank"><img src="img/graphic-design/s-logo.png"class="side-by-side"></a>
-        <a href="img/graphic-design/psa-poster.png" target="_blank"><img src="img/graphic-design/psa-poster.png"class="side-by-side"></a>
+        <a href="img/graphic-design/all-three-la-croix-cans.png"><img src="img/graphic-design/all-three-la-croix-cans.png" class="lone-image"></a>
+        <a href="img/graphic-design/Colorado-Symphony-01.png"><img src="img/graphic-design/Colorado-Symphony-01.png"class="side-by-side"></a>
+        <a href="img/graphic-design/Colorado-Symphony-02.png"><img src="img/graphic-design/Colorado-Symphony-02.png"class="side-by-side"></a>
+        <a href="img/graphic-design/PBWF-cover-redesign.png"class="side-by-side"><img src="img/graphic-design/PBWF-cover-redesign.png"class="side-by-side"></a>
+        <a href="img/graphic-design/model-x-layout.png"><img src="img/graphic-design/model-x-layout.png" class="lone-image" ></a>
+        <a href="img/graphic-design/dog.png"><img src="img/graphic-design/dog.png"class="side-by-side"></a>
+        <a href="img/graphic-design/BLONDE-LOGO-white-back.png"><img src="img/graphic-design/BLONDE-LOGO-white-back.png"class="side-by-side"></a>
+        <a href="img/graphic-design/SATT-logo-04.png"><img src="img/graphic-design/SATT-logo-04.png"class="side-by-side"> </a>       
+        <a href="img/graphic-design/skull-03.png"><img src="img/graphic-design/skull-03.png"class="side-by-side"></a>
+        <a href="img/graphic-design/EB-logo-04.png"><img src="img/graphic-design/EB-logo-04.png"class="side-by-side"></a>
+        <a href="img/graphic-design/Massimo_poster.png"><img src="img/graphic-design/Massimo_poster.png"class="side-by-side"></a>
+        <a href="img/graphic-design/s-logo.png"><img src="img/graphic-design/s-logo.png"class="side-by-side"></a>
+        <a href="img/graphic-design/psa-poster.png"><img src="img/graphic-design/psa-poster.png"class="side-by-side"></a>
         <!-- <img src="img/graphic-design/table.jpg" class="lone-image" > -->
       </div>
       <div class="spacer"></div>
