--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 					<!-- <img src="img/future.png" class="cover-img"> -->
 					<div class="hidden info" >
 						<h2>The Alberta Petite Hotel</h2>
-						<p class="categories">Web Design - Branding - Graphic Design - Digital Strategy - Experience Design</p>
+						<p class="categories">Web Design - Branding - Graphic Design - Digital Strategy - Copywriting</p>
 					</div>	
 				</div></a>
 				<a href="future.html"><div class="project" id="project02">
@@ -49,7 +49,7 @@
 				<a href="benign.html"><div class="project" id="project03">
 					<div class="hidden info" >
 						<h2>Benign: The Bee Kind Almonds</h2>
-						<p class="categories">Logo Design - Branding - Campaign Concept - Experience Design</p>
+						<p class="categories">Branding - Campaign Concept - Experience Design - Copywriting</p>
 					</div>
 				</div></a>
 				<a href="bizquiz.html"><div class="project" id="project04">
